force-app/main/default/objects/ACM_Subscription__c/ACM_Subscription__c.object-meta.xml
<CustomObject>
    <description>ACM - Manage subscriptions
Junction object between the contact and the API</description>
    <label>ACM Subscription</label>
    <nameField>
        <label>ACM_Subscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ACM Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>