force-app/main/default/objects/ACM_Subscription__c/fields/ACM_Subscriber__c.field-meta.xml
<CustomField>
    <fullName>ACM_Subscriber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SFP-9094- needs to be treated by an agent</description>
    <inlineHelpText>Name of requestor</inlineHelpText>
    <label>Subscriber</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ACM Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>