force-app/main/default/objects/ACM_Subscription__c/fields/AnypointCustomFields__c.field-meta.xml
<CustomField>
    <fullName>AnypointCustomFields__c</fullName>
    <label>CustomFields</label>
    <length>255</length>
    <referenceTo>acm_pkg__AnypointCustomFields__x</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>ExternalLookup</type>
</CustomField>