force-app/main/default/objects/ACM_Subscription__c/fields/AnypointEnvrionmentId__c.field-meta.xml
<CustomField>
    <fullName>AnypointEnvrionmentId__c</fullName>
    <description>Anypoint Envrionment Id</description>
    <label>AnypointEnvrionmentId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>