force-app/main/default/objects/ACM_Subscription__c/fields/API_Source_Environment__c.field-meta.xml
<CustomField>
    <fullName>API_Source_Environment__c</fullName>
    <label>API Source Environment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>