force-app/main/default/objects/ACM_Subscription__c/fields/ApiCustomFields__c.field-meta.xml
<CustomField>
    <fullName>ApiCustomFields__c</fullName>
    <label>ApiCustomFields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>