force-app/main/default/objects/ACM_Subscription__c/fields/ApiGroupInstanceId__c.field-meta.xml
<CustomField>
    <fullName>ApiGroupInstanceId__c</fullName>
    <description>ApiGroup InstanceId</description>
    <label>ApiGroupInstanceId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>