force-app/main/default/objects/ACM_Subscription__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <description>SFP-9094- needs to be treated by an agent</description>
    <inlineHelpText>Application that the subscription is associated to. This will provide the client id and secret to access the API Product</inlineHelpText>
    <label>Application</label>
    <length>255</length>
    <referenceTo>acm_pkg__AnypointApplications__x</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>ExternalLookup</type>
</CustomField>