force-app/main/default/objects/ACM_Subscription__c/fields/Application_Description__c.field-meta.xml
<CustomField>
    <fullName>Application_Description__c</fullName>
    <label>Application Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>