force-app/main/default/objects/ACM_Subscription__c/fields/Application_Redirect_URL__c.field-meta.xml
<CustomField>
    <fullName>Application_Redirect_URL__c</fullName>
    <label>Application Redirect URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>