force-app/main/default/objects/ACM_Subscription__c/fields/Application_T__c.field-meta.xml
<CustomField>
    <fullName>Application_T__c</fullName>
    <label>Application</label>
    <length>255</length>
    <type>Text</type>
</CustomField>