force-app/main/default/objects/ACM_Subscription__c/fields/Application_Title__c.field-meta.xml
<CustomField>
    <fullName>Application_Title__c</fullName>
    <label>Application Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>