force-app/main/default/objects/ACM_Subscription__c/fields/Approval__c.field-meta.xml
<CustomField>
    <fullName>Approval__c</fullName>
    <label>Approval</label>
    <length>255</length>
    <type>Text</type>
</CustomField>