force-app/main/default/objects/ACM_Subscription__c/fields/Approve_Contract_Response_Body__c.field-meta.xml
<CustomField>
    <fullName>Approve_Contract_Response_Body__c</fullName>
    <label>Approve Contract Response Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>