force-app/main/default/objects/ACM_Subscription__c/fields/Approve_Contract_Response_Code__c.field-meta.xml
<CustomField>
    <fullName>Approve_Contract_Response_Code__c</fullName>
    <label>Approve Contract Response Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>