force-app/main/default/objects/ACM_Subscription__c/fields/Approved_by_Authorized_Person__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_Authorized_Person__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFP-9094- needs to be treated by an agent</description>
    <inlineHelpText>Approval is required by the consumers organization authorized person</inlineHelpText>
    <label>Approved by Authorized Person</label>
    <type>Checkbox</type>
</CustomField>