force-app/main/default/objects/ACM_Subscription__c/fields/Approved_by_Authorized_Person_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_Authorized_Person_DateTime__c</fullName>
    <description>SFP-9094- needs to be treated by an agent</description>
    <inlineHelpText>Time/Date the authorized person approved the subscription</inlineHelpText>
    <label>Approved by Authorized Person DateTime</label>
    <type>DateTime</type>
</CustomField>