force-app/main/default/objects/ACM_Subscription__c/fields/Approved_by_Marketplace_Manager_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_Marketplace_Manager_DateTime__c</fullName>
    <description>SFP-9094- needs to be treated by an agent</description>
    <inlineHelpText>Date/Time Marketplace Manager authorized the subscription</inlineHelpText>
    <label>Approved by Marketplace Manager DateTime</label>
    <type>DateTime</type>
</CustomField>