force-app/main/default/objects/ACM_Subscription__c/fields/Approved_by_Marketplace_mnager__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_Marketplace_mnager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFP-9094- needs to be treated by an agent</description>
    <inlineHelpText>Approval is required by the Marketplace Manager</inlineHelpText>
    <label>Approved by Marketplace Manager</label>
    <type>Checkbox</type>
</CustomField>