force-app/main/default/objects/ACM_Subscription__c/fields/Approved_by_Product_Owner__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_Product_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFP-9094- needs to be treated by an agent</description>
    <inlineHelpText>Approval is required by the Product Owner</inlineHelpText>
    <label>Approved by Product Owner</label>
    <type>Checkbox</type>
</CustomField>