force-app/main/default/objects/ACM_Subscription__c/fields/BusinessArea__c.field-meta.xml
<CustomField>
    <fullName>BusinessArea__c</fullName>
    <label>Business Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Support</fullName>
            </value>
            <value>
                <fullName>Operations and Execution</fullName>
            </value>
            <value>
                <fullName>Reference Data</fullName>
            </value>
            <value>
                <fullName>Risk and Compliance</fullName>
            </value>
            <value>
                <fullName>Sales and Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>