force-app/main/default/objects/ACM_Subscription__c/fields/Community_Name__c.field-meta.xml
<CustomField>
    <fullName>Community_Name__c</fullName>
    <label>Community Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>