force-app/main/default/objects/ACM_Subscription__c/fields/ConsumingSystems__c.field-meta.xml
<CustomField>
    <fullName>ConsumingSystems__c</fullName>
    <label>Consuming Systems</label>
    <length>20</length>
    <type>Text</type>
</CustomField>