force-app/main/default/objects/ACM_Subscription__c/fields/Contract_T__c.field-meta.xml
<CustomField>
    <fullName>Contract_T__c</fullName>
    <label>Contract</label>
    <length>255</length>
    <type>Text</type>
</CustomField>