force-app/main/default/objects/ACM_Subscription__c/fields/Create_Subscription_Response_Body__c.field-meta.xml
<CustomField>
    <fullName>Create_Subscription_Response_Body__c</fullName>
    <label>Create Subscription Response Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>