force-app/main/default/objects/ACM_Subscription__c/fields/Create_Subscription_Response_Code__c.field-meta.xml
<CustomField>
    <fullName>Create_Subscription_Response_Code__c</fullName>
    <label>Create Subscription Response Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>