force-app/main/default/objects/ACM_Subscription__c/fields/FeatureDescription__c.field-meta.xml
<CustomField>
    <fullName>FeatureDescription__c</fullName>
    <label>Feature Description</label>
    <length>250</length>
    <type>Text</type>
</CustomField>