force-app/main/default/objects/ACM_Subscription__c/fields/FeatureName__c.field-meta.xml
<CustomField>
    <fullName>FeatureName__c</fullName>
    <label>Feature Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>