force-app/main/default/objects/ACM_Subscription__c/fields/FeatureOwner__c.field-meta.xml
<CustomField>
    <fullName>FeatureOwner__c</fullName>
    <label>Feature Owner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>