force-app/main/default/objects/ACM_Subscription__c/fields/For_manual_treatment__c.field-meta.xml
<CustomField>
    <fullName>For_manual_treatment__c</fullName>
    <description>SPF-9094 - Until APIs are connected, we need the record to be manually processed</description>
    <inlineHelpText>Until APIs are connected, we need the record to be manually processed</inlineHelpText>
    <label>For manual treatment</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>