force-app/main/default/objects/ACM_Subscription__c/fields/Marketplace_Manager_Approver__c.field-meta.xml
<CustomField>
    <fullName>Marketplace_Manager_Approver__c</fullName>
    <label>Marketplace Manager Approver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>