force-app/main/default/objects/ACM_Subscription__c/fields/Org_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Org_Display_Name__c</fullName>
    <formula>ACM_Subscriber__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Org Display Name</label>
    <type>Text</type>
</CustomField>