force-app/main/default/objects/ACM_Subscription__c/fields/Org_Name__c.field-meta.xml
<CustomField>
    <fullName>Org_Name__c</fullName>
    <formula>LOWER(CASESAFEID(ACM_Subscriber__r.Account.Id))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Org Name</label>
    <type>Text</type>
</CustomField>