force-app/main/default/objects/ACM_Subscription__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <description>SPF-9094 Lookup to the client selected Plan for the API subscription</description>
    <inlineHelpText>Lookup to the client selected Plan for the API subscription</inlineHelpText>
    <label>Plan</label>
    <length>255</length>
    <referenceTo>acm_pkg__AnypointApiGroupTiers__x</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>ExternalLookup</type>
</CustomField>