force-app/main/default/objects/ACM_Subscription__c/fields/Plan_T__c.field-meta.xml
<CustomField>
    <fullName>Plan_T__c</fullName>
    <label>Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>