force-app/main/default/objects/ACM_Subscription__c/fields/Product_Owner_Approver__c.field-meta.xml
<CustomField>
    <fullName>Product_Owner_Approver__c</fullName>
    <label>Product Owner Approver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>