force-app/main/default/objects/ACM_Subscription__c/fields/Product_Version__c.field-meta.xml
<CustomField>
    <fullName>Product_Version__c</fullName>
    <label>Product Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>