force-app/main/default/objects/ACM_Subscription__c/fields/Reject_Contract_Response_Body__c.field-meta.xml
<CustomField>
    <fullName>Reject_Contract_Response_Body__c</fullName>
    <label>Reject Contract Response Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>