force-app/main/default/objects/ACM_Subscription__c/fields/Reject_Contract_Response_Code__c.field-meta.xml
<CustomField>
    <fullName>Reject_Contract_Response_Code__c</fullName>
    <label>Reject Contract Response Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>