force-app/main/default/objects/ACM_Subscription__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consumer &amp; HNW Clients</fullName>
            </value>
            <value>
                <fullName>Business &amp; Commercial Clients</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Corporate &amp; Investment Banking</fullName>
            </value>
            <value>
                <fullName>Wealth &amp; Investment Clients</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>