force-app/main/default/objects/ACM_Subscription__c/fields/Source_API_Version__c.field-meta.xml
<CustomField>
    <fullName>Source_API_Version__c</fullName>
    <label>Source API Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>