force-app/main/default/objects/ACM_Subscription__c/fields/Source_Environment__c.field-meta.xml
<CustomField>
    <fullName>Source_Environment__c</fullName>
    <label>Source Environment</label>
    <length>255</length>
    <referenceTo>acm_pkg__AnypointApiGroupInstances__x</referenceTo>
    <relationshipLabel>ACM Subscriptions</relationshipLabel>
    <relationshipName>ACM_Subscriptions</relationshipName>
    <type>ExternalLookup</type>
</CustomField>