force-app/main/default/objects/ACM_Subscription__c/fields/Source_Environment_T__c.field-meta.xml
<CustomField>
    <fullName>Source_Environment_T__c</fullName>
    <label>Source Environment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>