force-app/main/default/objects/ACM_Subscription__c/listViews/API_Portal_ACM_Queue_ACM_Subscription.listView-meta.xml
<ListView>
    <fullName>API_Portal_ACM_Queue_ACM_Subscription</fullName>
    <filterScope>Queue</filterScope>
    <label>API Portal (ACM) Queue</label>
    <queue>API_Portal_ACM_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>