force-app/main/default/objects/ACM_Subscription__c/listViews/CIB_Marketplace_Manager_ACM_Subscription.listView-meta.xml
<ListView>
    <fullName>CIB_Marketplace_Manager_ACM_Subscription</fullName>
    <filterScope>Queue</filterScope>
    <label>CIBMarketplaceManager</label>
    <queue>CIB_Marketplace_Manager</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>