force-app/main/default/objects/ACM_Subscription__c/listViews/CIBProductOwner_ACM_Subscription.listView-meta.xml
<ListView>
    <fullName>CIBProductOwner_ACM_Subscription</fullName>
    <filterScope>Queue</filterScope>
    <label>CIBProductOwner</label>
    <queue>CIBProductOwner</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>