force-app/main/default/objects/ACM_Subscription__c/listViews/Marketplace_Managers_ACM_Subscription.listView-meta.xml
<ListView>
    <fullName>Marketplace_Managers_ACM_Subscription</fullName>
    <filterScope>Queue</filterScope>
    <label>Marketplace Managers</label>
    <queue>Marketplace_Managers</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>